// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with giant numbers 1`] = `
<RCTScrollView>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 30,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              goldAmount
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                  },
                ]
              }
            >
              
              
              18,000,000,000.000
            </Text>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#EEEEEE",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                Subtotal @ 
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  €
                  0.55
                </Text>
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                $
                31,920,000.00
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                exchangeFee
              </Text>
              <View
                accessible={true}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 10,
                    "left": 10,
                    "right": 10,
                    "top": 10,
                  }
                }
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackgroundBorderless",
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "flex-end",
                    "paddingHorizontal": 5,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../packages/mobile/src/images/info.png",
                    }
                  }
                  style={
                    Object {
                      "height": 12,
                      "tintColor": "#BDBDBD",
                      "width": 12,
                    }
                  }
                />
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                -
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                securityFee
              </Text>
              <View
                accessible={true}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 10,
                    "left": 10,
                    "right": 10,
                    "top": 10,
                  }
                }
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackgroundBorderless",
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "flex-end",
                    "paddingHorizontal": 5,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../packages/mobile/src/images/info.png",
                    }
                  }
                  style={
                    Object {
                      "height": 12,
                      "tintColor": "#BDBDBD",
                      "width": 12,
                    }
                  }
                />
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                -
              </Text>
            </Text>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#EEEEEE",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Bold",
                      "fontSize": 16,
                      "lineHeight": 24,
                    },
                  ]
                }
              >
                total
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 15,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                $
                31,920,000.00
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                Object {
                  "marginVertical": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                Celo Dollars (@
                 
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  0.75
                </Text>
                )
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 15,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#81868B",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                24,000,000.00
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`renders correctly with no exchange rate 1`] = `
<RCTScrollView>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 30,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              goldAmount
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                  },
                ]
              }
            >
              
              
              20.000
            </Text>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#EEEEEE",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                Subtotal @ 
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  €
                  0.55
                </Text>
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                $
                2.64
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                exchangeFee
              </Text>
              <View
                accessible={true}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 10,
                    "left": 10,
                    "right": 10,
                    "top": 10,
                  }
                }
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackgroundBorderless",
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "flex-end",
                    "paddingHorizontal": 5,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../packages/mobile/src/images/info.png",
                    }
                  }
                  style={
                    Object {
                      "height": 12,
                      "tintColor": "#BDBDBD",
                      "width": 12,
                    }
                  }
                />
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                -
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                securityFee
              </Text>
              <View
                accessible={true}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 10,
                    "left": 10,
                    "right": 10,
                    "top": 10,
                  }
                }
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackgroundBorderless",
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "flex-end",
                    "paddingHorizontal": 5,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../packages/mobile/src/images/info.png",
                    }
                  }
                  style={
                    Object {
                      "height": 12,
                      "tintColor": "#BDBDBD",
                      "width": 12,
                    }
                  }
                />
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                -
              </Text>
            </Text>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#EEEEEE",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Bold",
                      "fontSize": 16,
                      "lineHeight": 24,
                    },
                  ]
                }
              >
                total
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 15,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                $
                2.64
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                Object {
                  "marginVertical": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                Celo Dollars (@
                 
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  0.75
                </Text>
                )
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 15,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#81868B",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                1.99
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;
